# stock-analysis-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: docker-publish.yml
docs/: api.md  architecture-benchmark-notes.md  architecture.md  data-source-field-spec-audit.md  http-api-online-audit.md  plan.md  strategy.md
docs/specs/: data-source-field-governance.md  http-api-accuracy.md  local-daily-warehouse.md  tushare-first-research-snapshot.md  watch-polling-api.md
ops/: com.ryan.stock-analysis-api.plist
scripts/: poll_research_snapshot.py  restart_http_service.sh  run_http_service.sh  status_http_service.sh
src/: config.py  main.py
src/agents/: __init__.py  base.py  llm.py
src/analyzer/: __init__.py  base.py  competitive_analyzer.py  comps_analyzer.py  dcf_model.py  earnings_analyzer.py  fundamental_factors.py  lbo_model.py  multi_factor.py  normalizers.py  qlib_158_factors.py  research_strategy.py  technical_factors.py  three_statement_model.py  trend_analyzer.py
src/api/: __init__.py  deps.py  schemas.py
src/core/: __init__.py  constants.py  market_data_service.py  market_data_sync.py  pipeline.py  watch_polling.py
src/data_provider/: __init__.py  base.py  (+5 more)
tests/: __init__.py  conftest.py  test_alignment.py  test_contract_updates.py  test_http_api.py  test_market_data_warehouse.py  test_mcp_tools.py  test_provider_stability.py  test_research_snapshot.py  test_semantic_fixes.py  test_symbol_snapshot_refresh.py  test_watch_polling.py
(+57 files in other folders)
