[project]
name = "stock-analysis-api"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan", email = "627311610@qq.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "akshare (>=1.17.87,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "stockstats (>=0.6.5,<0.7.0)",
    "rich (>=14.2.0,<15.0.0)",
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "yfinance (>=0.2.50,<1.0.0)",
    "pyqlib (>=0.9.7,<0.10.0)",
    "tushare (>=1.2.89,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "sse-starlette (>=2.1.3,<3.0.0)",
    "pytdx (>=1.72,<2.0.0)",
    "baostock (>=0.8.8,<1.0.0)",
    "tenacity (>=8.2.0,<9.0.0)",
    "efinance (>=0.5.5.2,<0.6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "mcp (>=1.0.0,<2.0.0)",
]

[dependency-groups]
dev = ["taskipy (>=1.14.1,<2.0.0)", "black (>=26.3.0,<27.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.scripts]
start = "main:start"
stock-mcp = "src.mcp.server:mcp.run"

[tool.taskipy.tasks]
build = "docker build --build-arg USE_CHINA_MIRROR=true -t stock-analysis ."
run_docker = "docker run -d -p 8080:8080 --name stock-app stock-analysis"
